small changes to readme, index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +19,54 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Twitter Image Feed</title>
+    <meta
+      name="description"
+      content="An Instagram-like image gallery for Twitter"
+    />
+    <meta property="og:title" content="Twitter Image Feed" />
+    <meta
+      property="og:description"
+      content="An Instagram-like image gallery for Twitter"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://twitter-image-feed-react.herokuapp.com"
+    />
+    <meta property="og:site_name" content="Twitter Image Feed" />
+    <meta property="og:locale" content="en_US" />
+    <meta itemprop="name" content="Twitter Image Feed" />
+    <meta
+      itemprop="description"
+      content="An Instagram-like image gallery for Twitter"
+    />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://twitter-image-feed-react.herokuapp.com"
+    />
+    <meta name="twitter:site" content="@ausprout" />
+    <meta name="twitter:creator" content="@ausprout" />
+    <meta name="twitter:title" content="Twitter Image Feed" />
+    <meta
+      name="twitter:description"
+      content="An Instagram-like image gallery for Twitter"
+    />
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://twitter-image-feed-react.herokuapp.com/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://twitter-image-feed-react.herokuapp.com/favicon/favicon-16x16.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
