--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,10 +30,7 @@
       content="An Instagram-like image gallery for Twitter"
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://twitter-image-feed-react.herokuapp.com"
-    />
+    <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:site_name" content="Twitter Image Feed" />
     <meta property="og:locale" content="en_US" />
     <meta itemprop="name" content="Twitter Image Feed" />
@@ -43,10 +40,7 @@
     />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:url"
-      content="https://twitter-image-feed-react.herokuapp.com"
-    />
+    <meta name="twitter:url" content="%PUBLIC_URL%" />
     <meta name="twitter:site" content="@ausprout" />
     <meta name="twitter:creator" content="@ausprout" />
     <meta name="twitter:title" content="Twitter Image Feed" />
@@ -59,13 +53,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://twitter-image-feed-react.herokuapp.com/favicon/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="https://twitter-image-feed-react.herokuapp.com/favicon/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
     />
   </head>
   <body>
